--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^3.2.0",
+        "css-loader": "^1.0.1",
         "eslint": "^6.6.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-config-standard": "^14.1.0",
@@ -37,7 +37,17 @@
         "express-to-koa": "^1.0.6",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
+        "koa": "^2.6.2",
+        "koa-body": "^4.0.4",
+        "koa-compress": "^3.0.0",
+        "koa-conditional-get": "^2.0.0",
         "koa-connect": "^2.0.1",
+        "koa-etag": "^3.0.0",
+        "koa-loggers": "^0.6.0",
+        "koa-mount": "^4.0.0",
+        "koa-router": "^7.4.0",
+        "koa-send": "^5.0.0",
+        "koa-static": "^5.0.0",
         "loadsh": "0.0.4",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.13.0",
@@ -51,29 +61,23 @@
         "webpack-dev-middleware": "^3.4.0",
         "webpack-dev-server": "^3.9.0",
         "webpack-hot-middleware": "^2.24.3",
-        "webpack-merge": "^4.2.2",
-        "koa": "^2.6.2",
-        "koa-body": "^4.0.4",
-        "koa-compress": "^3.0.0",
-        "koa-conditional-get": "^2.0.0",
-        "koa-etag": "^3.0.0",
-        "koa-loggers": "^0.6.0",
-        "koa-mount": "^4.0.0",
-        "koa-router": "^7.4.0",
-        "koa-send": "^5.0.0",
-        "koa-static": "^5.0.0"
+        "webpack-merge": "^4.2.2"
     },
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/polyfill": "^7.7.0",
+        "@hot-loader/react-dom": "^16.13.0",
+        "antd": "^4.1.5",
         "core-js": "^2.6.10",
+        "mobx": "^5.15.4",
+        "mobx-react": "^6.1.8",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-hot-loader": "^4.12.20",
         "react-redux": "^5.0.7",
         "react-router": "3.2.1",
+        "react-router-dom": "^5.1.2",
         "redux": "^3.7.2",
-        "redux-devtools": "^3.4.1",
-        "mobx": "^5.15.4",
-        "mobx-react": "^6.1.8"
+        "redux-devtools": "^3.4.1"
     }
 }
