--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "@babel/plugin-proposal-decorators": "^7.7.4",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-react": "^7.7.0",
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.6",
+        "@teamsupercell/typings-for-css-modules-loader": "^2.0.0",
         "autoprefixer": "^9.7.1",
         "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
@@ -55,6 +58,8 @@
         "postcss-loader": "^3.0.0",
         "sass-loader": "^8.0.0",
         "style-loader": "^1.0.0",
+        "ts-loader": "^6.2.1",
+        "typescript": "^3.8.2",
         "url-loader": "^2.2.0",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
@@ -78,6 +83,7 @@
         "react-router": "3.2.1",
         "react-router-dom": "^5.1.2",
         "redux": "^3.7.2",
-        "redux-devtools": "^3.4.1"
+        "redux-devtools": "^3.4.1",
+        "typings-for-css-modules-loader": "^1.7.0"
     }
 }
