添加代理模式

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "@babel/plugin-proposal-decorators": "^7.7.4",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-react": "^7.7.0",
+        "@teamsupercell/typings-for-css-modules-loader": "^2.0.0",
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.6",
-        "@teamsupercell/typings-for-css-modules-loader": "^2.0.0",
         "autoprefixer": "^9.7.1",
         "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
@@ -74,6 +74,7 @@
         "@hot-loader/react-dom": "^16.13.0",
         "antd": "^4.1.5",
         "core-js": "^2.6.10",
+        "koa-server-http-proxy": "^0.1.0",
         "mobx": "^5.15.4",
         "mobx-react": "^6.1.8",
         "react": "^16.12.0",
