--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@teamsupercell/typings-for-css-modules-loader": "^2.0.0",
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.6",
+        "@types/react-router": "^3.0.20",
         "autoprefixer": "^9.7.1",
         "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
@@ -81,7 +82,7 @@
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.20",
         "react-redux": "^5.0.7",
-        "react-router": "3.2.1",
+        "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "redux": "^3.7.2",
         "redux-devtools": "^3.4.1",
