--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/polyfill": "^7.7.0",
         "@hot-loader/react-dom": "^16.13.0",
+        "@types/react-router-dom": "^5.1.5",
         "antd": "^4.1.5",
         "core-js": "^2.6.10",
         "koa-server-http-proxy": "^0.1.0",
