--- a/package.json
+++ b/package.json
@@ -74,11 +74,12 @@
         "@babel/polyfill": "^7.7.0",
         "@hot-loader/react-dom": "^16.13.0",
         "@types/react-router-dom": "^5.1.5",
-        "antd": "^4.1.5",
+        "antd": "^3.20.6",
         "core-js": "^2.6.10",
         "koa-server-http-proxy": "^0.1.0",
-        "mobx": "^5.15.4",
-        "mobx-react": "^6.1.8",
+        "mobx": "^5.8.0",
+        "mobx-react": "5.4.3",
+        "mobx-react-lite": "^1.5.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-hot-loader": "^4.12.20",
